--- a/estilo/style.css
+++ b/estilo/style.css
@@ -30,15 +30,16 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     min-height: 80px;
     background-color: var(--cor1);
-    padding: 10px;
+    padding: 0px 20px;
 }
 
 header img {
-    max-width: 194px;
-    max-height: 50px;
-    margin: 0px 10px;
+    margin-top: 10px;
+    max-width: 233px;
+    max-height: 60px;
 }
 
 header .menu {
@@ -208,7 +209,7 @@ main picture {
     gap: 40px 0px;
     width: 100%;
     min-height: 900px;
-    padding: 10px;
+    padding: 20px;
     background-color: rgb(200, 235, 255);
 }
 
@@ -227,7 +228,7 @@ main picture {
 }
 
 .text-section3 {
-    width: 300px;
+    max-width: 400px;
     min-height: 350px;
     padding-top: 50px;
 }
